--- a/packages/audio/package.json
+++ b/packages/audio/package.json
@@ -26,7 +26,10 @@
     "@stencil/core": "latest",
     "@stencil/postcss": "^1.0.1",
     "autoprefixer": "^9.8.6",
-    "postcss-import": "^12.0.1"
+    "hex-to-hsl": "^1.0.2",
+    "postcss-import": "^12.0.1",
+    "raf": "^3.4.1",
+    "webmidi": "^2.5.1"
   },
   "license": "MIT"
 }
