Adding package.json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lerna.version": "lerna version --conventional-commits --yes --no-push",
     "lerna.publish": "lerna publish from-package",
     "git.push": "git push --follow-tags",
-    "bump": "yarn build && yarn lerna.version && yarn lerna.publish && yarn git.push",
+    "cut": "yarn build && yarn lerna.version && yarn lerna.publish && yarn git.push",
     "diff": "lerna diff"
   },
   "husky": {
