--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "license": "MIT",
   "name": "@midwest-design/core",
-  "version": "0.0.1",
+  "version": "1.0.132",
   "description": "Stencil Component Starter",
   "main": "dist/index.js",
   "module": "./dist/index.mjs",
@@ -42,8 +42,8 @@
     "@fullcalendar/daygrid": "^5.3.0",
     "@fullcalendar/interaction": "^5.3.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@midwest-design/common": "0.0.1",
-    "@midwest-design/helpers": "0.0.1",
+    "@midwest-design/common": "^1.0.131",
+    "@midwest-design/helpers": "^1.0.131",
     "@stencil/core": "latest",
     "@stencil/postcss": "^1.0.1",
     "@stencil/state-tunnel": "^1.0.1",
