--- a/packages/media/package.json
+++ b/packages/media/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@midwest-design/media",
+  "public": true,
   "version": "0.0.1",
   "description": "Stencil Component Starter",
   "main": "dist/index.js",
