--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -14,6 +14,9 @@
     "test.watch": "stencil test --spec --e2e --watch",
     "generate": "stencil generate"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@ionic/core": "^5.3.1",
     "@midwest-design/audio": "^0.0.1",
