--- a/packages/media/package.json
+++ b/packages/media/package.json
@@ -37,5 +37,8 @@
     "postcss-import": "^12.0.1",
     "small-indexeddb": "^2.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT"
 }
