--- a/packages/motion/package.json
+++ b/packages/motion/package.json
@@ -35,5 +35,8 @@
     "cssnano": "^4.1.10",
     "postcss-import": "^12.0.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT"
 }
