--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@midwest-design/helpers",
   "public": true,
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Stencil Component Starter",
   "main": "dist/index.js",
   "module": "./dist/index.mjs",
@@ -26,8 +26,8 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@midwest-design/common": "^0.0.1",
-    "@midwest-design/core": "0.0.2",
+    "@midwest-design/common": "^0.0.3",
+    "@midwest-design/core": "^0.0.3",
     "@stencil/core": "latest",
     "@stencil/postcss": "^1.0.1",
     "@types/googlemaps": "^3.39.13",
