--- a/packages/new-tab/package.json
+++ b/packages/new-tab/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@midwest-design/new-tab",
   "public": true,
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Stencil Component Starter",
   "main": "dist/index.js",
   "module": "./dist/index.mjs",
@@ -26,16 +26,16 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@midwest-design/common": "^0.0.3",
+    "@midwest-design/core": "^0.0.3",
+    "@midwest-design/helpers": "^0.0.3",
+    "@midwest-design/media": "^0.0.3",
+    "@midwest-design/motion": "^0.0.3",
     "@stencil/core": "latest",
     "@stencil/postcss": "^1.0.1",
+    "@stencil/router": "latest",
     "autoprefixer": "^9.8.6",
-    "postcss-import": "^12.0.1",
-    "@midwest-design/core": "^0.0.2",
-    "@midwest-design/common": "^0.0.1",
-    "@midwest-design/helpers": "^0.0.1",
-    "@midwest-design/media": "^0.0.1",
-    "@midwest-design/motion": "^0.0.1",
-    "@stencil/router": "latest"
+    "postcss-import": "^12.0.1"
   },
   "publishConfig": {
     "access": "public"
