--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -34,6 +34,7 @@
     "ag-grid-community": "^23.2.1",
     "async-delay": "^1.0.3",
     "autoprefixer": "^9.8.6",
+    "copy-to-clipboard": "^3.3.1",
     "googlemaps": "^1.12.0",
     "highcharts": "8",
     "parallaxis": "^1.2.1",
