--- a/packages/media/package.json
+++ b/packages/media/package.json
@@ -3,8 +3,8 @@
   "public": true,
   "version": "0.0.11",
   "description": "Stencil Component Starter",
-  "main": "dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.js",
   "es2015": "dist/esm/index.mjs",
   "es2017": "dist/esm/index.mjs",
   "types": "dist/custom-elements/index.d.ts",
@@ -28,7 +28,7 @@
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@midwest-design/common": "^0.0.11",
     "@midwest-design/core": "^0.0.11",
-    "@stencil/core": "latest",
+    "@stencil/core": "^2.0.0-6",
     "@stencil/postcss": "^1.0.1",
     "async-delay": "^1.0.3",
     "autoprefixer": "^9.8.6",
