--- a/packages/new-tab/package.json
+++ b/packages/new-tab/package.json
@@ -3,8 +3,8 @@
   "public": true,
   "version": "0.0.11",
   "description": "Stencil Component Starter",
-  "main": "dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.js",
   "es2015": "dist/esm/index.mjs",
   "es2017": "dist/esm/index.mjs",
   "types": "dist/custom-elements/index.d.ts",
@@ -34,7 +34,7 @@
     "@midwest-design/helpers": "^0.0.11",
     "@midwest-design/media": "^0.0.11",
     "@midwest-design/motion": "^0.0.4",
-    "@stencil/core": "latest",
+    "@stencil/core": "^2.0.0-6",
     "@stencil/postcss": "^1.0.1",
     "@stencil/router": "latest",
     "autoprefixer": "^9.8.6",
