--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,8 +4,8 @@
   "public": true,
   "version": "0.0.11",
   "description": "Stencil Component Starter",
-  "main": "dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.js",
   "es2015": "dist/esm/index.mjs",
   "es2017": "dist/esm/index.mjs",
   "types": "dist/custom-elements/index.d.ts",
@@ -50,7 +50,7 @@
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@midwest-design/common": "^0.0.11",
     "@midwest-design/helpers": "^0.0.11",
-    "@stencil/core": "latest",
+    "@stencil/core": "^2.0.0-6",
     "@stencil/postcss": "^1.0.1",
     "@stencil/state-tunnel": "^1.0.1",
     "@storybook/addon-a11y": "^6.0.10",
