chore(release): chore(release): Fixup some dark mode inconsistencies

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -22,6 +22,7 @@
     "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
     "test:unit": "nyc --silent ava",
     "watch": "run-s clean watch:main",
+    "start": "run-s clean watch:main",
     "cov": "run-s build test:unit cov:html && open-cli coverage/index.html",
     "cov:html": "nyc report --reporter=html",
     "cov:send": "nyc report --reporter=lcov && codecov",
