--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,10 +26,7 @@
     "test.watch": "stencil test --spec --e2e --watchAll",
     "storybook.start": "start-storybook -p 6006 -s www",
     "storybook.build": "build-storybook -c .storybook -o storybook-dist",
-    "generate": "stencil generate",
-    "dev": "npm run watch-dev | npm run dev-stencil",
-    "dev-stencil": "npm run dev-mode && npm run co-prebuild && stencil build --dev --watch --serve",
-    "watch-dev": "node ./build/dev-watch.js"
+    "generate": "stencil generate"
   },
   "contributes": {
     "html": {
@@ -49,7 +46,6 @@
     "@fullcalendar/interaction": "^5.3.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@midwest-design/common": "^0.0.11",
-    "@midwest-design/helpers": "^0.0.11",
     "@stencil/core": "^2.0.0-6",
     "@stencil/postcss": "^1.0.1",
     "@stencil/state-tunnel": "^1.0.1",
