--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -16,10 +16,7 @@
     "jsx": "react",
     "jsxFactory": "h"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": [ "src" ],
+  "exclude": [ "node_modules" ],
+  "references": [{"path": "../common"}]
 }
