--- a/packages/export-to-figma/package.json
+++ b/packages/export-to-figma/package.json
@@ -25,6 +25,7 @@
     "generate": "stencil generate"
   },
   "dependencies": {
+    "@midwest-design/common": "0.0.11",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@stencil/core": "^2.0.0-6",
     "@stencil/postcss": "^1.0.1",
