--- a/packages/new-tab/package.json
+++ b/packages/new-tab/package.json
@@ -35,7 +35,7 @@
     "@midwest-design/helpers": "^0.0.14",
     "@midwest-design/media": "^0.0.14",
     "@midwest-design/motion": "^0.0.14",
-    "@stencil/core": "^2.6.0",
+    "@stencil/core": "latest",
     "@stencil/postcss": "^1.0.1",
     "@stencil/router": "latest",
     "autoprefixer": "^9.8.6",
