--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "name": "@midwest-design/core",
   "public": true,
   "version": "0.0.14",
-  "description": "Stencil Component Starter",
+  "description": "Midwest Design System",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
   "es2015": "dist/esm/index.mjs",
@@ -22,9 +22,15 @@
     "build": "stencil build --docs",
     "build.ci": "stencil build --ci",
     "start": "stencil build --dev --watch --serve",
-    "test": "stencil test --spec --e2e",
+    "test": "stencil test --spec --e2e --screenshot",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "test.spec.watch": "stencil test --spec --watchAll",
+    "test.e2e.watch": "stencil test --e2e --watchAll",
+    "stylelint:fix": "stylelint --fix \"src/**/*.css\"",
+    "generate": "stencil generate",
+    "lint": "run-p \"lint.ts\" \"lint.styles\"",
+    "lint.styles": "stylelint \"src/**/*.css\"",
+    "lint.ts": "eslint src/**/*.tsx"
   },
   "contributes": {
     "html": {
@@ -44,9 +50,8 @@
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@midwest-design/common": "^0.0.14",
     "@open-wc/lit-helpers": "^0.3.11",
-    "@stencil/core": "^2.6.0",
+    "@stencil/core": "latest",
     "@stencil/postcss": "^1.0.1",
-    "@stencil/state-tunnel": "^1.0.1",
     "@types/base-64": "^0.1.3",
     "@types/swiper": "^5.4.0",
     "@types/validator": "^13.6.0",
@@ -54,6 +59,7 @@
     "animate-presence": "^0.2.1",
     "async-delay": "^1.0.3",
     "autoprefixer": "^9.8.6",
+    "cssnano": "^4.1.10",
     "base-64": "^0.1.0",
     "convert-units": "^2.3.4",
     "dayjs": "^1.8.33",
