--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
   "license": "MIT",
   "name": "@midwest-design/core",
   "public": true,
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Midwest Design System",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
@@ -48,20 +48,19 @@
     "@fullcalendar/daygrid": "^5.3.0",
     "@fullcalendar/interaction": "^5.3.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@midwest-design/common": "^0.0.14",
+    "@midwest-design/common": "^0.0.15",
     "@open-wc/lit-helpers": "^0.3.11",
     "@stencil/core": "latest",
     "@stencil/postcss": "^1.0.1",
     "@types/base-64": "^0.1.3",
     "@types/swiper": "^5.4.0",
     "@types/validator": "^13.6.0",
-    "validator": "^13.6.0",
     "animate-presence": "^0.2.1",
     "async-delay": "^1.0.3",
     "autoprefixer": "^9.8.6",
-    "cssnano": "^4.1.10",
     "base-64": "^0.1.0",
     "convert-units": "^2.3.4",
+    "cssnano": "^4.1.10",
     "dayjs": "^1.8.33",
     "debounce-decorator": "^1.0.6",
     "focus-within": "^3.0.2",
@@ -71,7 +70,8 @@
     "round-to": "^4.1.0",
     "source-map-support": "^0.5.19",
     "tailwindcss": "^2",
-    "ts-node": "^8.10.2"
+    "ts-node": "^8.10.2",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
