--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@midwest-design/forms",
   "public": true,
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Stencil Component Starter",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
@@ -27,17 +27,17 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@midwest-design/common": "^0.0.14",
-    "@midwest-design/core": "^0.0.14",
+    "@midwest-design/common": "^0.0.15",
+    "@midwest-design/core": "^0.0.15",
     "@stencil/core": "latest",
     "@stencil/postcss": "^1.0.1",
-    "zxcvbn": "latest",
     "animejs": "^3.2.0",
     "autoprefixer": "^9.8.6",
     "basicscroll": "^3.0.3",
     "css-custom-properties": "^0.1.0",
     "cssnano": "^4.1.10",
-    "postcss-import": "^12.0.1"
+    "postcss-import": "^12.0.1",
+    "zxcvbn": "latest"
   },
   "publishConfig": {
     "access": "public"
