--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -51,13 +51,18 @@
     "access": "public"
   },
   "dependencies": {
+    "@stencil/angular-output-target": "^0.2.0",
+    "@stencil/react-output-target": "^0.1.0",
     "@stencil/store": "^1.3.0",
+    "@stencil/svelte-output-target": "^0.0.3",
+    "@stencil/vue-output-target": "^0.5.1",
     "@types/jest": "^26.0.0",
     "appmetrics.js": "0.0.9",
     "base-64": "^0.1.0",
     "css-custom-properties": "^0.1.0",
     "dayjs": "^1.8.33",
     "jest": "^26.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
