--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -52,6 +52,7 @@
     "@open-wc/lit-helpers": "^0.3.11",
     "@stencil/core": "latest",
     "@stencil/postcss": "^1.0.1",
+    "@stencil/store": "^1.5.0",
     "@types/base-64": "^0.1.3",
     "@types/swiper": "^5.4.0",
     "@types/validator": "^13.6.0",
@@ -84,5 +85,6 @@
     "puppeteer": "^5.5.0",
     "webpack": "^4.44.1",
     "write-file-webpack-plugin": "^4.5.1"
-  }
+  },
+  "customElements": "custom-elements.json"
 }
