--- a/packages/tsconfig.settings.json
+++ b/packages/tsconfig.settings.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "target": "es2019",
+    "module": "ES2020",
+    "target": "ES2020",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
