build: Allow angular to be public

--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@midwest-design/angular",
   "version": "0.0.17",
+  "public": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,7 +17,6 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
     "@angular/common": "~13.0.0",
