--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "clean.stencil-cache": "find . -name \".stencil\" -exec rm -rf '{}' +",
     "clean.dist": "find . -name \"dist\" -exec rm -rf '{}' +",
     "lerna.version": "lerna version --conventional-commits --yes --no-push",
+    "lerna.version.minor": "lerna version minor --conventional-commits --yes --no-push",
     "lerna.publish": "lerna publish from-package",
     "git.push": "git push --follow-tags",
     "cut": "yarn lerna.version && yarn lerna.publish && yarn git.push",
+    "cut.minor": "yarn lerna.version.minor && yarn lerna.publish && yarn git.push",
     "diff": "lerna diff",
     "storybook": "start-storybook -p 6006",
     "storybook.upgrade": "npx sb upgrade",
