--- a/packages/media/package.json
+++ b/packages/media/package.json
@@ -26,15 +26,15 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@midwest-design/common": "^0.1.0",
     "@midwest-design/core": "^0.1.1",
-    "@stencil/core": "latest",
-    "@stencil/postcss": "^1.0.1",
+    "@stencil/core": "^2.14.0",
+    "@stencil/postcss": "^2.1.0",
     "async-delay": "^1.0.3",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.4.2",
     "ez-clipboard": "^1.0.0",
-    "ionicons": "^5.1.2",
+    "ionicons": "^6.0.1",
     "kaleidoscopejs": "^1.1.1",
     "medium-zoom": "^0.4.0",
     "postcss-import": "^12.0.1",
