--- a/packages/audio/package.json
+++ b/packages/audio/package.json
@@ -26,15 +26,15 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@midwest-design/common": "^0.1.0",
-    "@stencil/core": "latest",
-    "@stencil/postcss": "^1.0.1",
-    "autoprefixer": "^9.8.6",
+    "@stencil/core": "^2.14.0",
+    "@stencil/postcss": "^2.1.0",
+    "autoprefixer": "^10.4.2",
     "hex-to-hsl": "^1.0.2",
     "postcss-import": "^12.0.1",
     "raf": "^3.4.1",
-    "webmidi": "^2.5.1"
+    "webmidi": "^2.5.3"
   },
   "publishConfig": {
     "access": "public"
