--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,43 +47,41 @@
     "@fullcalendar/core": "^5.3.0",
     "@fullcalendar/daygrid": "^5.3.0",
     "@fullcalendar/interaction": "^5.3.0",
-    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@midwest-design/common": "^0.1.0",
-    "@open-wc/lit-helpers": "^0.3.11",
-    "@stencil/core": "latest",
-    "@stencil/postcss": "^1.0.1",
+    "@open-wc/lit-helpers": "^0.4.0",
+    "@stencil/core": "^2.14.0",
+    "@stencil/postcss": "^2.1.0",
     "@stencil/store": "^1.5.0",
-    "@types/base-64": "^0.1.3",
+    "@types/base-64": "^1.0.0",
     "@types/swiper": "^5.4.0",
     "@types/validator": "^13.6.0",
     "animate-presence": "^0.2.1",
     "async-delay": "^1.0.3",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.4.2",
     "base-64": "^0.1.0",
     "convert-units": "^2.3.4",
-    "cssnano": "^4.1.10",
-    "dayjs": "^1.8.33",
+    "cssnano": "^5.1.0",
+    "dayjs": "^1.10.8",
     "debounce-decorator": "^1.0.6",
     "focus-within": "^3.0.2",
     "pluralize": "^8.0.0",
     "postcss-design-token-function": "^1.0.0",
     "postcss-import": "^12.0.1",
-    "round-to": "^4.1.0",
+    "round-to": "^6.0.0",
     "source-map-support": "^0.5.19",
     "tailwindcss": "^2",
     "ts-node": "^8.10.2",
-    "validator": "^13.6.0"
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.0",
-    "@types/puppeteer": "^5.4.3",
+    "@babel/core": "^7.17.5",
     "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "copy-webpack-plugin": "^10.2.4",
     "lit-html": "^1.4.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
-    "puppeteer": "^5.5.0",
-    "webpack": "^4.44.1",
+    "prettier": "^2.5.1",
+    "webpack": "^4.46.0",
     "write-file-webpack-plugin": "^4.5.1"
   },
   "customElements": "custom-elements.json"
