--- a/packages/export-to-figma/package.json
+++ b/packages/export-to-figma/package.json
@@ -26,12 +26,12 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@midwest-design/common": "^0.1.0",
-    "@stencil/core": "latest",
-    "@stencil/postcss": "^1.0.1",
-    "autoprefixer": "^9.8.6",
-    "figma-js": "^1.9.0",
+    "@stencil/core": "^2.14.0",
+    "@stencil/postcss": "^2.1.0",
+    "autoprefixer": "^10.4.2",
+    "figma-js": "^1.15.0",
     "postcss-import": "^12.0.1"
   },
   "publishConfig": {
