--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -26,18 +26,18 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@midwest-design/common": "^0.1.0",
     "@midwest-design/core": "^0.1.1",
-    "@stencil/core": "latest",
-    "@stencil/postcss": "^1.0.1",
-    "animejs": "^3.2.0",
-    "autoprefixer": "^9.8.6",
+    "@stencil/core": "^2.14.0",
+    "@stencil/postcss": "^2.1.0",
+    "animejs": "^3.2.1",
+    "autoprefixer": "^10.4.2",
     "basicscroll": "^3.0.3",
     "css-custom-properties": "^0.1.0",
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.1.0",
     "postcss-import": "^12.0.1",
-    "zxcvbn": "latest"
+    "zxcvbn": "^4.4.2"
   },
   "publishConfig": {
     "access": "public"
