--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -26,22 +26,22 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@midwest-design/common": "^0.1.0",
     "@midwest-design/core": "^0.1.1",
-    "@stencil/core": "latest",
-    "@stencil/postcss": "^1.0.1",
+    "@stencil/core": "^2.14.0",
+    "@stencil/postcss": "^2.1.0",
     "@types/googlemaps": "^3.39.13",
     "ag-grid-community": "^23.2.1",
     "async-delay": "^1.0.3",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.4.2",
     "copy-to-clipboard": "^3.3.1",
     "googlemaps": "^1.12.0",
-    "highcharts": "8",
+    "highcharts": "9.3.3",
     "parallaxis": "^1.2.1",
     "pjax": "^0.2.8",
     "postcss-import": "^12.0.1",
-    "shepherd.js": "^8.0.2",
+    "shepherd.js": "^8.3.1",
     "showdown": "^1.9.1"
   },
   "publishConfig": {
